Show fields for other lineage entities (#15513)
* show fields for other entities

* fix minor delete issue

* add support for topics and dashboards

* minor fixes

* Remove constraints of connecting column level lineae

* Enable Column Level lineage for all the entities

* Add delete edge by name apis

* fix fields display on drop

* Fix finding a nested column while adding column level lineage

* Fix finding a nested column while adding column level lineage

* add support for collapsible record and struct fields

* add column level lineage cypress

* minor fixes

* Fix dashboard chart lineage

* Fix dashboard chart lineage

---------

Co-authored-by: Sriharsha Chintalapani <harsha@getcollate.io>